Update assignment 4_Control Flow.ipynb

--- a/assignment 4_Control Flow.ipynb
+++ b/assignment 4_Control Flow.ipynb
@@ -5,7 +5,7 @@
    "id": "14918c4e-4e46-4fc4-822a-7316180fb595",
    "metadata": {},
    "source": [
-    "# Assignment 4"
+    "# Assignment 4 control flows"
    ]
   },
   {
